# HyperGutterTree

./: .gitignore  CMakeLists.txt  README.md  buffer_control_block.cpp  buffer_tree.cpp  buffer_tree.h  example_buffering.conf  sketch_write_manager.cpp
.github/workflows/: cmake.yml
experiment/: experiment.cpp  gutter_tree_exp.cpp  standalone_exp.cpp
include/: buffer_control_block.h  buffer_flusher.h  buffer_tree.h  buffering_system.h  cache_gutter_tree.h  circular_queue.h  flush_worker.h  gutter_tree.h  guttering_system.h  root_control_block.h  sketch.h  sketch_write_manager.h  standalone_gutters.h  stream_ingestor.h  types.h  update.h  work_queue.h
src/: buffer_control_block.cpp  buffer_flusher.cpp  buffer_tree.cpp  buffering_system.cpp  cache_gutter_tree.cpp  circular_queue.cpp  flush_worker.cpp  gutter_tree.cpp  guttering_system.cpp  root_control_block.cpp  sketch_write_manager.cpp  standalone_gutters.cpp  work_queue.cpp
test/: basic_test.cpp  cache_gutter_tree_test.cpp  flush_worker_test.cpp  gutter_tree_test.cpp  guttering_systems_test.cpp  standalone_gutters_test.cpp
test/mocks/: GraphWorkerMock.cpp  GraphWorkerMock.h
